--- a/frontend/public/locales/hi/translation.json
+++ b/frontend/public/locales/hi/translation.json
@@ -1,13 +1,362 @@
 {
-  "header": {"login": "लॉगिन", "get_started": "शुरू करें"},
-  "nav": {"home": "होम", "about": "के बारे में", "pricing": "मूल्य निर्धारण", "contact": "संपर्क", "login": "लॉगिन"},
-  "auth": {"welcome_back": "वापस स्वागत है!", "sign_in_subtitle": "जारी रखने के लिए साइन इन करें", "email_address": "ईमेल पता", "password": "पासवर्ड", "sign_in": "साइन इन", "continue_google": "Google के साथ जारी रखें", "no_account": "कोई खाता नहीं है?", "sign_up": "साइन अप", "or": "या", "forgot_password": "पासवर्ड भूल गए?"},
-  "common": {"loading": "लोड हो रहा है...", "error": "त्रुटि", "success": "सफलता", "cancel": "रद्द करें", "save": "सहेजें", "edit": "संपादित करें", "delete": "हटाएं", "add": "जोड़ें", "view": "देखें", "close": "बंद करें", "confirm": "पुष्टि करें", "yes": "हां", "no": "नहीं", "learn_more": "और जानें", "analytics": "विश्लेषण", "payments": "भुगतान", "actions": "कार्य", "status": "स्थिति", "name": "नाम", "email": "ईमेल", "phone": "फोन", "address": "पता", "city": "शहर", "state": "राज्य", "zip_code": "पिन कोड", "country": "देश", "date": "दिनांक", "amount": "राशि", "description": "विवरण", "type": "प्रकार", "active": "सक्रिय", "inactive": "निष्क्रिय", "pending": "लंबित", "approved": "अनुमोदित", "rejected": "अस्वीकृत", "all_languages": "सभी भाषाएं", "theme": "थीम", "language": "भाषा", "notifications": "सूचनाएं", "profile": "प्रोफाइल", "settings": "सेटिंग्स"},
-  "dashboard": {"overview": "अवलोकन", "properties": "संपत्तियां", "tenants": "किरायेदार", "settings": "सेटिंग्स", "logout": "लॉग आउट", "maintenance": "रखरखाव", "expenses": "खर्च", "cash_flow": "नकदी प्रवाह", "reminders": "अनुस्मारक", "approvals": "अनुमोदन", "users_invites": "उपयोगकर्ता और आमंत्रण", "billing": "बिलिंग", "audit_log": "ऑडिट लॉग", "admin_panel": "एडमिन पैनल", "monthly_revenue": "मासिक आय", "total_properties": "कुल संपत्तियां", "active_tenants": "सक्रिय किरायेदार", "occupancy_rate": "अधिभोग दर", "tenant_profile": "किरायेदार प्रोफाइल", "lease_information": "पट्टा जानकारी", "pending_approval_requests": "लंबित अनुमोदन अनुरोध", "no_pending_requests": "कोई लंबित अनुरोध नहीं", "manage_account_preferences": "खाता और प्राथमिकताएं प्रबंधित करें", "profile_information": "प्रोफाइल जानकारी", "email_notifications": "ईमेल सूचनाएं", "push_notifications": "पुश सूचनाएं", "automated_reminders": "स्वचालित अनुस्मारक", "add_new_reminder": "नया अनुस्मारक जोड़ें", "no_automated_reminders": "कोई स्वचालित अनुस्मारक कॉन्फ़िगर नहीं", "tenant": "किरायेदार", "next_send": "अगली भेजना", "frequency": "आवृत्ति"},
-  "landing": {"hero_title": "आधुनिक संपत्ति प्रबंधन के लिए ऑल-इन-वन प्लेटफॉर्म", "hero_subtitle": "कार्यों को स्वचालित करें, वित्त को ट्रैक करें, और किरायेदारों को आसानी से प्रबंधित करें।", "hero_cta": "अपना मुफ्त परीक्षण शुरू करें", "real_stats_title": "दुनिया भर के संपत्ति प्रबंधकों द्वारा भरोसा", "properties_managed": "प्रबंधित संपत्तियां", "active_users": "सक्रिय उपयोगकर्ता", "countries_served": "सेवा प्रदान किए गए देश", "uptime_guarantee": "अपटाइम गारंटी"},
-  "pricing": {"free": "मुफ्त", "choose_plan": "योजना चुनें", "monthly": "मासिक", "yearly": "वार्षिक", "per_month": "प्रति माह", "per_year": "प्रति वर्ष", "most_popular": "सबसे लोकप्रिय", "get_started": "शुरू करें", "contact_sales": "बिक्री से संपर्क करें"},
-  "forms": {"street_address": "सड़क का पता", "required_field": "यह फ़ील्ड आवश्यक है", "invalid_email": "कृपया एक वैध ईमेल पता दर्ज करें", "password_too_short": "पासवर्ड कम से कम 8 अक्षर का होना चाहिए", "passwords_dont_match": "पासवर्ड मेल नहीं खाते"},
-  "property": {"add_property": "संपत्ति जोड़ें", "edit_property": "संपत्ति संपादित करें", "property_name": "संपत्ति का नाम", "property_type": "संपत्ति का प्रकार", "apartment": "अपार्टमेंट", "house": "घर", "commercial": "व्यावसायिक", "other": "अन्य", "rent_amount": "किराया राशि", "security_deposit": "सिक्यूरिटी डिपॉजिट", "available_units": "उपलब्ध इकाइयां", "total_units": "कुल इकाइयां"},
-  "tenant": {"add_tenant": "किरायेदार जोड़ें", "edit_tenant": "किरायेदार संपादित करें", "tenant_name": "किरायेदार का नाम", "lease_start": "पट्टा शुरुआत", "lease_end": "पट्टा समाप्ति", "rent_due_date": "किराया देय तिथि", "late": "देर से", "id_front": "आईडी सामने", "id_back": "आईडी पीछे"},
-  "expense": {"add_expense": "खर्च जोड़ें", "edit_expense": "खर्च संपादित करें", "expense_category": "खर्च श्रेणी", "insurance": "बीमा", "taxes": "कर", "salary": "वेतन", "maintenance_repair": "रखरखाव और मरम्मत", "utilities": "उपयोगिताएं", "advertising": "विज्ञापन", "legal_professional": "कानूनी और पेशेवर", "travel": "यात्रा", "office_supplies": "कार्यालय आपूर्ति"}
+  "app_name": "HNV Property Management Solutions",
+  "app_name_short": "HNV Solutions",
+  "header": {
+    "login": "Login",
+    "get_started": "Get Started",
+    "about": "About",
+    "services": "Services",
+    "pricing": "Pricing",
+    "contact": "Contact"
+  },
+  "nav": {
+    "home": "Home",
+    "about": "About",
+    "features": "Features",
+    "services": "Services",
+    "pricing": "Pricing",
+    "contact": "Contact",
+    "login": "Login",
+    "dashboard": "Dashboard"
+  },
+  "auth": {
+    "welcome_back": "Welcome Back!",
+    "sign_in_subtitle": "Sign in to continue to your dashboard",
+    "email_address": "Email Address",
+    "password": "Password",
+    "sign_in": "Sign In",
+    "continue_google": "Continue with Google",
+    "no_account": "Don't have an account?",
+    "sign_up": "Sign Up",
+    "or": "OR",
+    "forgot_password": "Forgot Password?",
+    "enter_email": "Enter your email address",
+    "enter_password": "Enter your password",
+    "remember_me": "Remember me",
+    "create_account": "Create Account",
+    "full_name": "Full Name",
+    "confirm_password": "Confirm Password",
+    "agree_terms": "I agree to the Terms of Service and Privacy Policy",
+    "agent": "Agent",
+    "check_email": "Check your email for verification link",
+    "create_password": "Create a strong password",
+    "enter_full_name": "Enter your full name",
+    "go_to_login": "Go to Login",
+    "have_account": "Already have an account?",
+    "join_thousands": "Join thousands of property managers",
+    "landlord": "Landlord",
+    "role": "Role",
+    "tenant": "Tenant",
+    "verification_sent": "Verification email sent"
+  },
+  "common": {
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "cancel": "Cancel",
+    "save": "Save",
+    "edit": "Edit",
+    "delete": "Delete",
+    "add": "Add",
+    "view": "View",
+    "close": "Close",
+    "confirm": "Confirm",
+    "yes": "Yes",
+    "no": "No",
+    "welcome_back_user": "Welcome back, {{name}}!",
+    "happening_today": "Here's what's happening with your properties today.",
+    "learn_more": "Learn More",
+    "analytics": "Analytics",
+    "payments": "Payments",
+    "actions": "Actions",
+    "status": "Status",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "country": "Country",
+    "date": "Date",
+    "amount": "Amount",
+    "description": "Description",
+    "type": "Type",
+    "active": "Active",
+    "inactive": "Inactive",
+    "pending": "Pending",
+    "approved": "Approved",
+    "rejected": "Rejected",
+    "all_languages": "All Languages",
+    "theme": "Theme",
+    "language": "Language",
+    "notifications": "Notifications",
+    "profile": "Profile",
+    "settings": "Settings",
+    "search": "Search...",
+    "filter": "Filters",
+    "clear_all": "Clear All",
+    "all": "All",
+    "more_options": "More Options",
+    "quick_links": "Quick Links",
+    "legal": "Legal",
+    "about": "About",
+    "features": "Features",
+    "privacy_policy": "Privacy Policy",
+    "terms_of_service": "Terms of Service",
+    "property_management": "Property Management",
+    "change_language": "Change Language",
+    "select_language": "Select Language",
+    "toggle_language": "Toggle Language",
+    "switch_to": "Switch to",
+    "current_language": "Current Language",
+    "theme_dark": "Dark",
+    "theme_light": "Light",
+    "mode": "Mode",
+    "security": "Security"
+  },
+  "dashboard": {
+    "overview": "Overview",
+    "properties": "Properties",
+    "tenants": "Tenants",
+    "settings": "Settings",
+    "logout": "Logout",
+    "maintenance": "Maintenance",
+    "expenses": "Expenses",
+    "cash_flow": "Cash Flow",
+    "reminders": "Reminders",
+    "approvals": "Approvals",
+    "users_invites": "Users & Invites",
+    "billing": "Billing",
+    "audit_log": "Audit Log",
+    "admin_panel": "Admin Panel",
+    "monthly_revenue": "Monthly Revenue",
+    "total_properties": "Total Properties",
+    "active_tenants": "Active Tenants",
+    "occupancy_rate": "Occupancy Rate",
+    "loading_data": "Loading dashboard data...",
+    "overdue_rent_reminders": "Overdue Rent Reminders",
+    "send_reminder": "Send Reminder",
+    "no_overdue_rent": "No overdue rent payments",
+    "upcoming_lease_expirations": "Upcoming Lease Expirations",
+    "renew_lease": "Renew Lease",
+    "no_expiring_leases": "No expiring leases",
+    "financials_chart_title": "Financial Overview",
+    "rent_status_chart_title": "Rent Status",
+    "tenant_profile": "Tenant Profile",
+    "lease_information": "Lease Information",
+    "pending_approval_requests": "Pending Approval Requests",
+    "no_pending_requests": "No Pending Requests",
+    "manage_account_preferences": "Manage your account and preferences",
+    "profile_information": "Profile Information",
+    "email_notifications": "Email Notifications",
+    "push_notifications": "Push Notifications",
+    "automated_reminders": "Automated Reminders",
+    "add_new_reminder": "Add New Reminder",
+    "no_automated_reminders": "No Automated Reminders Configured",
+    "tenant": "Tenant",
+    "next_send": "Next Send",
+    "frequency": "Frequency",
+    "payments": "Payments",
+    "welcome_message": "Welcome to your dashboard",
+    "good_morning": "Good morning",
+    "good_afternoon": "Good afternoon",
+    "good_evening": "Good evening"
+  },
+  "hero": {
+    "title": "The All-in-One Platform for Modern Property Management",
+    "subtitle": "Automate tasks, track finances, and manage tenants with ease. Join thousands of property managers who trust our platform.",
+    "cta_primary": "Start Your Free Trial",
+    "cta_secondary": "Watch Demo",
+    "trusted_by": "Trusted by property managers worldwide"
+  },
+  "landing": {
+    "hero_title": "The All-in-One Platform for Modern Property Management",
+    "hero_subtitle": "Automate tasks, track finances, and manage tenants with ease.",
+    "hero_cta": "Start Your Free Trial",
+    "real_stats_title": "Trusted by Property Managers Worldwide",
+    "properties_managed": "Properties Managed",
+    "active_users": "Active Users",
+    "countries_served": "Countries Served",
+    "uptime_guarantee": "Uptime Guarantee"
+  },
+  "landscape": {
+    "title": "Transform Your Property Management",
+    "subtitle": "Experience the future of property management with our comprehensive platform",
+    "image_alt": "Property Management Platform"
+  },
+  "about": {
+    "title": "About Us",
+    "subtitle": "Revolutionizing property management with innovative technology",
+    "description": "We are dedicated to providing the most comprehensive and user-friendly property management solution. Our platform helps landlords, agents, and property managers streamline their operations and grow their business.",
+    "mission_title": "Our Mission",
+    "mission_description": "To empower property managers with cutting-edge technology that simplifies complex tasks and drives business growth.",
+    "vision_title": "Our Vision",
+    "vision_description": "To become the global leader in property management software, trusted by millions of users worldwide."
+  },
+  "features": {
+    "title": "Powerful Features",
+    "subtitle": "Everything you need to manage properties efficiently",
+    "property_management": "Property Management",
+    "property_management_desc": "Comprehensive property tracking and management tools",
+    "tenant_management": "Tenant Management",
+    "tenant_management_desc": "Complete tenant lifecycle management",
+    "financial_tracking": "Financial Tracking",
+    "financial_tracking_desc": "Advanced financial reporting and analytics",
+    "maintenance_management": "Maintenance Management",
+    "maintenance_management_desc": "Streamlined maintenance request handling",
+    "automated_reminders": "Automated Reminders",
+    "automated_reminders_desc": "Never miss important dates and payments",
+    "mobile_access": "Mobile Access",
+    "mobile_access_desc": "Manage your properties on the go",
+    "security_desc": "Enterprise-grade security for your data"
+  },
+  "pricing": {
+    "title": "Simple, Transparent Pricing",
+    "subtitle": "Choose the plan that fits your needs",
+    "free": "Free",
+    "choose_plan": "Choose Plan",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "per_month": "per month",
+    "per_year": "per year",
+    "most_popular": "Most Popular",
+    "get_started": "Get Started",
+    "contact_sales": "Contact Sales",
+    "free_plan_name": "Starter",
+    "basic_plan_name": "Professional",
+    "premium_plan_name": "Enterprise",
+    "free_plan_desc": "Perfect for getting started",
+    "basic_plan_desc": "For growing property portfolios",
+    "premium_plan_desc": "For large-scale operations"
+  },
+  "services": {
+    "title": "Our Services",
+    "subtitle": "Comprehensive property management solutions",
+    "property_tracking_title": "Property Tracking",
+    "property_tracking_desc": "Track all your properties in one place",
+    "rent_collection_title": "Rent Collection",
+    "rent_collection_desc": "Automated rent collection and reminders",
+    "tenant_management_title": "Tenant Management",
+    "tenant_management_desc": "Manage tenants and lease agreements",
+    "maintenance_title": "Maintenance Management",
+    "maintenance_desc": "Handle maintenance requests efficiently",
+    "financial_reporting_title": "Financial Reporting",
+    "financial_reporting_desc": "Comprehensive financial insights and reports",
+    "document_management_title": "Document Management",
+    "document_management_desc": "Secure document storage and management"
+  },
+  "contact": {
+    "title": "Get in Touch",
+    "subtitle": "We'd love to hear from you. Send us a message and we'll respond as soon as possible.",
+    "name": "Name",
+    "email": "Email",
+    "subject": "Subject",
+    "message": "Message",
+    "send_message": "Send Message",
+    "contact_info": "Contact Information",
+    "address": "Address",
+    "phone": "Phone",
+    "email_address": "Email Address",
+    "business_hours": "Business Hours",
+    "monday_friday": "Monday - Friday: 9:00 AM - 6:00 PM",
+    "saturday": "Saturday: 10:00 AM - 4:00 PM",
+    "sunday": "Sunday: Closed"
+  },
+  "install_app": {
+    "title": "Install Our App",
+    "subtitle": "Get the native mobile experience",
+    "description": "Download our mobile app for the best property management experience on the go.",
+    "download_ios": "Download for iOS",
+    "download_android": "Download for Android",
+    "scan_qr": "Scan QR Code"
+  },
+  "leadership": {
+    "title": "Meet Our Team",
+    "subtitle": "The experts behind our success",
+    "ceo_name": "John Smith",
+    "ceo_title": "Chief Executive Officer",
+    "cto_name": "Jane Doe",
+    "cto_title": "Chief Technology Officer",
+    "coo_name": "Mike Johnson",
+    "coo_title": "Chief Operating Officer"
+  },
+  "forms": {
+    "street_address": "Street Address",
+    "required_field": "This field is required",
+    "invalid_email": "Please enter a valid email address",
+    "password_too_short": "Password must be at least 8 characters",
+    "passwords_dont_match": "Passwords don't match"
+  },
+  "property": {
+    "add_property": "Add Property",
+    "edit_property": "Edit Property",
+    "property_name": "Property Name",
+    "property_type": "Property Type",
+    "apartment": "Apartment",
+    "house": "House",
+    "commercial": "Commercial",
+    "other": "Other",
+    "rent_amount": "Rent Amount",
+    "security_deposit": "Security Deposit",
+    "available_units": "Available Units",
+    "total_units": "Total Units",
+    "loading_properties": "Loading properties...",
+    "manage_portfolio": "Manage your property portfolio",
+    "view": "View",
+    "edit": "Edit",
+    "no_properties_yet": "No Properties Yet",
+    "add_first_property": "Add Your First Property",
+    "add_new_property": "Add New Property",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "click_to_upload": "Click to upload image",
+    "enter_property_name": "Enter property name",
+    "inactive": "Inactive",
+    "active": "Active",
+    "number_of_units": "Number of Units",
+    "property_image": "Property Image",
+    "save_property": "Save Property",
+    "street_address": "Street Address",
+    "units": "Units"
+  },
+  "tenant": {
+    "add_tenant": "Add Tenant",
+    "edit_tenant": "Edit Tenant",
+    "tenant_name": "Tenant Name",
+    "lease_start": "Lease Start",
+    "lease_end": "Lease End",
+    "rent_due_date": "Rent Due Date",
+    "late": "Late",
+    "id_front": "ID Front",
+    "id_back": "ID Back"
+  },
+  "expense": {
+    "add_expense": "Add Expense",
+    "edit_expense": "Edit Expense",
+    "expense_category": "Expense Category",
+    "insurance": "Insurance",
+    "taxes": "Taxes",
+    "salary": "Salary",
+    "maintenance_repair": "Maintenance & Repair",
+    "utilities": "Utilities",
+    "advertising": "Advertising",
+    "legal_professional": "Legal & Professional",
+    "travel": "Travel",
+    "office_supplies": "Office Supplies"
+  },
+  "footer": {
+    "company_description": "The leading property management platform trusted by thousands of property managers worldwide.",
+    "quick_links": "Quick Links",
+    "support": "Support",
+    "legal": "Legal",
+    "follow_us": "Follow Us",
+    "newsletter_title": "Stay Updated",
+    "newsletter_subtitle": "Subscribe to our newsletter for the latest updates",
+    "enter_email": "Enter your email",
+    "subscribe": "Subscribe",
+    "all_rights_reserved": "All rights reserved"
+  }
 }
