--- a/frontend/public/locales/ja/translation.json
+++ b/frontend/public/locales/ja/translation.json
@@ -1,15 +1,362 @@
 {
-  "header": {"login": "ログイン", "get_started": "始める"},
-  "nav": {"home": "ホーム", "about": "について", "pricing": "料金", "contact": "お問い合わせ", "login": "ログイン"},
-  "auth": {"welcome_back": "おかえりなさい！", "sign_in_subtitle": "続行するにはサインインしてください", "email_address": "メールアドレス", "password": "パスワード", "sign_in": "サインイン", "continue_google": "Googleで続行", "no_account": "アカウントをお持ちでない方", "sign_up": "サインアップ", "or": "または", "forgot_password": "パスワードを忘れた方", "enter_email": "メールアドレスを入力", "enter_password": "パスワードを入力", "remember_me": "ログイン状態を保持", "create_account": "アカウント作成", "full_name": "氏名", "confirm_password": "パスワード確認", "agree_terms": "利用規約とプライバシーポリシーに同意します", "agent": "エージェント", "check_email": "確認リンクのメールをチェック", "create_password": "強力なパスワードを作成", "enter_full_name": "氏名を入力", "go_to_login": "ログインへ", "have_account": "既にアカウントをお持ちですか？", "join_thousands": "数千の不動産管理者に参加", "landlord": "大家", "role": "役割", "tenant": "テナント", "verification_sent": "確認メールを送信しました"},
-  "common": {"loading": "読み込み中...", "error": "エラー", "success": "成功", "cancel": "キャンセル", "save": "保存", "edit": "編集", "delete": "削除", "add": "追加", "view": "表示", "close": "閉じる", "confirm": "確認", "yes": "はい", "no": "いいえ", "learn_more": "詳細を見る", "analytics": "分析", "payments": "支払い", "actions": "アクション", "status": "ステータス", "name": "名前", "email": "メール", "phone": "電話", "address": "住所", "city": "市区町村", "state": "都道府県", "zip_code": "郵便番号", "country": "国", "date": "日付", "amount": "金額", "description": "説明", "type": "タイプ", "active": "アクティブ", "inactive": "非アクティブ", "pending": "保留中", "approved": "承認済み", "rejected": "却下", "all_languages": "すべての言語", "theme": "テーマ", "language": "言語", "notifications": "通知", "profile": "プロフィール", "settings": "設定", "search": "検索...", "filter": "フィルター", "clear_all": "すべてクリア", "all": "すべて", "more_options": "その他のオプション", "quick_links": "クイックリンク", "legal": "法的事項", "about": "について", "features": "機能", "privacy_policy": "プライバシーポリシー", "terms_of_service": "利用規約", "property_management": "不動産管理"},
-  "dashboard": {"overview": "概要", "properties": "物件", "tenants": "テナント", "settings": "設定", "logout": "ログアウト", "maintenance": "メンテナンス", "expenses": "経費", "cash_flow": "キャッシュフロー", "reminders": "リマインダー", "approvals": "承認", "users_invites": "ユーザーと招待", "billing": "請求", "audit_log": "監査ログ", "admin_panel": "管理パネル", "monthly_revenue": "月間収益", "total_properties": "総物件数", "active_tenants": "アクティブテナント", "occupancy_rate": "入居率", "loading_data": "ダッシュボードデータを読み込み中...", "overdue_rent_reminders": "家賃滞納リマインダー", "send_reminder": "リマインダー送信", "no_overdue_rent": "滞納家賃なし", "upcoming_lease_expirations": "リース期限切れ予定", "renew_lease": "リース更新", "no_expiring_leases": "期限切れリースなし", "financials_chart_title": "財務概要", "rent_status_chart_title": "家賃ステータス", "tenant_profile": "テナントプロフィール", "lease_information": "リース情報", "pending_approval_requests": "承認待ちリクエスト", "no_pending_requests": "保留中のリクエストはありません", "manage_account_preferences": "アカウントと設定を管理", "profile_information": "プロフィール情報", "email_notifications": "メール通知", "push_notifications": "プッシュ通知", "automated_reminders": "自動リマインダー", "add_new_reminder": "新しいリマインダーを追加", "no_automated_reminders": "自動リマインダーが設定されていません", "tenant": "テナント", "next_send": "次回送信", "frequency": "頻度", "payments": "支払い"},
-  "landing": {"hero_title": "現代の不動産管理のためのオールインワンプラットフォーム", "hero_subtitle": "タスクを自動化し、財務を追跡し、テナントを簡単に管理します。", "hero_cta": "無料トライアルを開始", "real_stats_title": "世界中の不動産管理者に信頼されています", "properties_managed": "管理物件数", "active_users": "アクティブユーザー", "countries_served": "サービス提供国", "uptime_guarantee": "稼働時間保証"},
-  "pricing": {"free": "無料", "choose_plan": "プランを選択", "monthly": "月額", "yearly": "年額", "per_month": "月あたり", "per_year": "年あたり", "most_popular": "最も人気", "get_started": "始める", "contact_sales": "営業に問い合わせ"},
-  "services": {"title": "私たちのサービス", "subtitle": "包括的な不動産管理ソリューション", "property_tracking_title": "物件追跡", "property_tracking_desc": "すべての物件を一箇所で追跡", "rent_collection_title": "家賃回収", "rent_collection_desc": "自動家賃回収とリマインダー", "tenant_management_title": "テナント管理", "tenant_management_desc": "テナントとリース契約を管理"},
-  "install_app": {"title": "アプリをインストール", "subtitle": "ネイティブモバイル体験を取得"},
-  "forms": {"street_address": "住所", "required_field": "この項目は必須です", "invalid_email": "有効なメールアドレスを入力してください", "password_too_short": "パスワードは8文字以上である必要があります", "passwords_dont_match": "パスワードが一致しません"},
-  "property": {"add_property": "物件を追加", "edit_property": "物件を編集", "property_name": "物件名", "property_type": "物件タイプ", "apartment": "アパート", "house": "一戸建て", "commercial": "商業用", "other": "その他", "rent_amount": "家賃", "security_deposit": "敷金", "available_units": "利用可能ユニット", "total_units": "総ユニット数", "loading_properties": "物件を読み込み中...", "manage_portfolio": "物件ポートフォリオを管理", "view": "表示", "edit": "編集", "no_properties_yet": "まだ物件がありません", "add_first_property": "最初の物件を追加", "add_new_property": "新しい物件を追加", "address": "住所", "city": "市区町村", "state": "都道府県", "zip_code": "郵便番号", "click_to_upload": "クリックして画像をアップロード", "enter_property_name": "物件名を入力", "inactive": "非アクティブ", "active": "アクティブ", "number_of_units": "ユニット数", "property_image": "物件画像", "save_property": "物件を保存", "street_address": "住所", "units": "ユニット"},
-  "tenant": {"add_tenant": "テナントを追加", "edit_tenant": "テナントを編集", "tenant_name": "テナント名", "lease_start": "リース開始", "lease_end": "リース終了", "rent_due_date": "家賃支払日", "late": "遅延", "id_front": "身分証明書表", "id_back": "身分証明書裏"},
-  "expense": {"add_expense": "経費を追加", "edit_expense": "経費を編集", "expense_category": "経費カテゴリ", "insurance": "保険", "taxes": "税金", "salary": "給与", "maintenance_repair": "メンテナンス・修理", "utilities": "光熱費", "advertising": "広告", "legal_professional": "法務・専門", "travel": "旅費", "office_supplies": "事務用品"}
+  "app_name": "HNV Property Management Solutions",
+  "app_name_short": "HNV Solutions",
+  "header": {
+    "login": "Login",
+    "get_started": "Get Started",
+    "about": "About",
+    "services": "Services",
+    "pricing": "Pricing",
+    "contact": "Contact"
+  },
+  "nav": {
+    "home": "Home",
+    "about": "About",
+    "features": "Features",
+    "services": "Services",
+    "pricing": "Pricing",
+    "contact": "Contact",
+    "login": "Login",
+    "dashboard": "Dashboard"
+  },
+  "auth": {
+    "welcome_back": "Welcome Back!",
+    "sign_in_subtitle": "Sign in to continue to your dashboard",
+    "email_address": "Email Address",
+    "password": "Password",
+    "sign_in": "Sign In",
+    "continue_google": "Continue with Google",
+    "no_account": "Don't have an account?",
+    "sign_up": "Sign Up",
+    "or": "OR",
+    "forgot_password": "Forgot Password?",
+    "enter_email": "Enter your email address",
+    "enter_password": "Enter your password",
+    "remember_me": "Remember me",
+    "create_account": "Create Account",
+    "full_name": "Full Name",
+    "confirm_password": "Confirm Password",
+    "agree_terms": "I agree to the Terms of Service and Privacy Policy",
+    "agent": "Agent",
+    "check_email": "Check your email for verification link",
+    "create_password": "Create a strong password",
+    "enter_full_name": "Enter your full name",
+    "go_to_login": "Go to Login",
+    "have_account": "Already have an account?",
+    "join_thousands": "Join thousands of property managers",
+    "landlord": "Landlord",
+    "role": "Role",
+    "tenant": "Tenant",
+    "verification_sent": "Verification email sent"
+  },
+  "common": {
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "cancel": "Cancel",
+    "save": "Save",
+    "edit": "Edit",
+    "delete": "Delete",
+    "add": "Add",
+    "view": "View",
+    "close": "Close",
+    "confirm": "Confirm",
+    "yes": "Yes",
+    "no": "No",
+    "welcome_back_user": "Welcome back, {{name}}!",
+    "happening_today": "Here's what's happening with your properties today.",
+    "learn_more": "Learn More",
+    "analytics": "Analytics",
+    "payments": "Payments",
+    "actions": "Actions",
+    "status": "Status",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "country": "Country",
+    "date": "Date",
+    "amount": "Amount",
+    "description": "Description",
+    "type": "Type",
+    "active": "Active",
+    "inactive": "Inactive",
+    "pending": "Pending",
+    "approved": "Approved",
+    "rejected": "Rejected",
+    "all_languages": "All Languages",
+    "theme": "Theme",
+    "language": "Language",
+    "notifications": "Notifications",
+    "profile": "Profile",
+    "settings": "Settings",
+    "search": "Search...",
+    "filter": "Filters",
+    "clear_all": "Clear All",
+    "all": "All",
+    "more_options": "More Options",
+    "quick_links": "Quick Links",
+    "legal": "Legal",
+    "about": "About",
+    "features": "Features",
+    "privacy_policy": "Privacy Policy",
+    "terms_of_service": "Terms of Service",
+    "property_management": "Property Management",
+    "change_language": "Change Language",
+    "select_language": "Select Language",
+    "toggle_language": "Toggle Language",
+    "switch_to": "Switch to",
+    "current_language": "Current Language",
+    "theme_dark": "Dark",
+    "theme_light": "Light",
+    "mode": "Mode",
+    "security": "Security"
+  },
+  "dashboard": {
+    "overview": "Overview",
+    "properties": "Properties",
+    "tenants": "Tenants",
+    "settings": "Settings",
+    "logout": "Logout",
+    "maintenance": "Maintenance",
+    "expenses": "Expenses",
+    "cash_flow": "Cash Flow",
+    "reminders": "Reminders",
+    "approvals": "Approvals",
+    "users_invites": "Users & Invites",
+    "billing": "Billing",
+    "audit_log": "Audit Log",
+    "admin_panel": "Admin Panel",
+    "monthly_revenue": "Monthly Revenue",
+    "total_properties": "Total Properties",
+    "active_tenants": "Active Tenants",
+    "occupancy_rate": "Occupancy Rate",
+    "loading_data": "Loading dashboard data...",
+    "overdue_rent_reminders": "Overdue Rent Reminders",
+    "send_reminder": "Send Reminder",
+    "no_overdue_rent": "No overdue rent payments",
+    "upcoming_lease_expirations": "Upcoming Lease Expirations",
+    "renew_lease": "Renew Lease",
+    "no_expiring_leases": "No expiring leases",
+    "financials_chart_title": "Financial Overview",
+    "rent_status_chart_title": "Rent Status",
+    "tenant_profile": "Tenant Profile",
+    "lease_information": "Lease Information",
+    "pending_approval_requests": "Pending Approval Requests",
+    "no_pending_requests": "No Pending Requests",
+    "manage_account_preferences": "Manage your account and preferences",
+    "profile_information": "Profile Information",
+    "email_notifications": "Email Notifications",
+    "push_notifications": "Push Notifications",
+    "automated_reminders": "Automated Reminders",
+    "add_new_reminder": "Add New Reminder",
+    "no_automated_reminders": "No Automated Reminders Configured",
+    "tenant": "Tenant",
+    "next_send": "Next Send",
+    "frequency": "Frequency",
+    "payments": "Payments",
+    "welcome_message": "Welcome to your dashboard",
+    "good_morning": "Good morning",
+    "good_afternoon": "Good afternoon",
+    "good_evening": "Good evening"
+  },
+  "hero": {
+    "title": "The All-in-One Platform for Modern Property Management",
+    "subtitle": "Automate tasks, track finances, and manage tenants with ease. Join thousands of property managers who trust our platform.",
+    "cta_primary": "Start Your Free Trial",
+    "cta_secondary": "Watch Demo",
+    "trusted_by": "Trusted by property managers worldwide"
+  },
+  "landing": {
+    "hero_title": "The All-in-One Platform for Modern Property Management",
+    "hero_subtitle": "Automate tasks, track finances, and manage tenants with ease.",
+    "hero_cta": "Start Your Free Trial",
+    "real_stats_title": "Trusted by Property Managers Worldwide",
+    "properties_managed": "Properties Managed",
+    "active_users": "Active Users",
+    "countries_served": "Countries Served",
+    "uptime_guarantee": "Uptime Guarantee"
+  },
+  "landscape": {
+    "title": "Transform Your Property Management",
+    "subtitle": "Experience the future of property management with our comprehensive platform",
+    "image_alt": "Property Management Platform"
+  },
+  "about": {
+    "title": "About Us",
+    "subtitle": "Revolutionizing property management with innovative technology",
+    "description": "We are dedicated to providing the most comprehensive and user-friendly property management solution. Our platform helps landlords, agents, and property managers streamline their operations and grow their business.",
+    "mission_title": "Our Mission",
+    "mission_description": "To empower property managers with cutting-edge technology that simplifies complex tasks and drives business growth.",
+    "vision_title": "Our Vision",
+    "vision_description": "To become the global leader in property management software, trusted by millions of users worldwide."
+  },
+  "features": {
+    "title": "Powerful Features",
+    "subtitle": "Everything you need to manage properties efficiently",
+    "property_management": "Property Management",
+    "property_management_desc": "Comprehensive property tracking and management tools",
+    "tenant_management": "Tenant Management",
+    "tenant_management_desc": "Complete tenant lifecycle management",
+    "financial_tracking": "Financial Tracking",
+    "financial_tracking_desc": "Advanced financial reporting and analytics",
+    "maintenance_management": "Maintenance Management",
+    "maintenance_management_desc": "Streamlined maintenance request handling",
+    "automated_reminders": "Automated Reminders",
+    "automated_reminders_desc": "Never miss important dates and payments",
+    "mobile_access": "Mobile Access",
+    "mobile_access_desc": "Manage your properties on the go",
+    "security_desc": "Enterprise-grade security for your data"
+  },
+  "pricing": {
+    "title": "Simple, Transparent Pricing",
+    "subtitle": "Choose the plan that fits your needs",
+    "free": "Free",
+    "choose_plan": "Choose Plan",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "per_month": "per month",
+    "per_year": "per year",
+    "most_popular": "Most Popular",
+    "get_started": "Get Started",
+    "contact_sales": "Contact Sales",
+    "free_plan_name": "Starter",
+    "basic_plan_name": "Professional",
+    "premium_plan_name": "Enterprise",
+    "free_plan_desc": "Perfect for getting started",
+    "basic_plan_desc": "For growing property portfolios",
+    "premium_plan_desc": "For large-scale operations"
+  },
+  "services": {
+    "title": "Our Services",
+    "subtitle": "Comprehensive property management solutions",
+    "property_tracking_title": "Property Tracking",
+    "property_tracking_desc": "Track all your properties in one place",
+    "rent_collection_title": "Rent Collection",
+    "rent_collection_desc": "Automated rent collection and reminders",
+    "tenant_management_title": "Tenant Management",
+    "tenant_management_desc": "Manage tenants and lease agreements",
+    "maintenance_title": "Maintenance Management",
+    "maintenance_desc": "Handle maintenance requests efficiently",
+    "financial_reporting_title": "Financial Reporting",
+    "financial_reporting_desc": "Comprehensive financial insights and reports",
+    "document_management_title": "Document Management",
+    "document_management_desc": "Secure document storage and management"
+  },
+  "contact": {
+    "title": "Get in Touch",
+    "subtitle": "We'd love to hear from you. Send us a message and we'll respond as soon as possible.",
+    "name": "Name",
+    "email": "Email",
+    "subject": "Subject",
+    "message": "Message",
+    "send_message": "Send Message",
+    "contact_info": "Contact Information",
+    "address": "Address",
+    "phone": "Phone",
+    "email_address": "Email Address",
+    "business_hours": "Business Hours",
+    "monday_friday": "Monday - Friday: 9:00 AM - 6:00 PM",
+    "saturday": "Saturday: 10:00 AM - 4:00 PM",
+    "sunday": "Sunday: Closed"
+  },
+  "install_app": {
+    "title": "Install Our App",
+    "subtitle": "Get the native mobile experience",
+    "description": "Download our mobile app for the best property management experience on the go.",
+    "download_ios": "Download for iOS",
+    "download_android": "Download for Android",
+    "scan_qr": "Scan QR Code"
+  },
+  "leadership": {
+    "title": "Meet Our Team",
+    "subtitle": "The experts behind our success",
+    "ceo_name": "John Smith",
+    "ceo_title": "Chief Executive Officer",
+    "cto_name": "Jane Doe",
+    "cto_title": "Chief Technology Officer",
+    "coo_name": "Mike Johnson",
+    "coo_title": "Chief Operating Officer"
+  },
+  "forms": {
+    "street_address": "Street Address",
+    "required_field": "This field is required",
+    "invalid_email": "Please enter a valid email address",
+    "password_too_short": "Password must be at least 8 characters",
+    "passwords_dont_match": "Passwords don't match"
+  },
+  "property": {
+    "add_property": "Add Property",
+    "edit_property": "Edit Property",
+    "property_name": "Property Name",
+    "property_type": "Property Type",
+    "apartment": "Apartment",
+    "house": "House",
+    "commercial": "Commercial",
+    "other": "Other",
+    "rent_amount": "Rent Amount",
+    "security_deposit": "Security Deposit",
+    "available_units": "Available Units",
+    "total_units": "Total Units",
+    "loading_properties": "Loading properties...",
+    "manage_portfolio": "Manage your property portfolio",
+    "view": "View",
+    "edit": "Edit",
+    "no_properties_yet": "No Properties Yet",
+    "add_first_property": "Add Your First Property",
+    "add_new_property": "Add New Property",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "click_to_upload": "Click to upload image",
+    "enter_property_name": "Enter property name",
+    "inactive": "Inactive",
+    "active": "Active",
+    "number_of_units": "Number of Units",
+    "property_image": "Property Image",
+    "save_property": "Save Property",
+    "street_address": "Street Address",
+    "units": "Units"
+  },
+  "tenant": {
+    "add_tenant": "Add Tenant",
+    "edit_tenant": "Edit Tenant",
+    "tenant_name": "Tenant Name",
+    "lease_start": "Lease Start",
+    "lease_end": "Lease End",
+    "rent_due_date": "Rent Due Date",
+    "late": "Late",
+    "id_front": "ID Front",
+    "id_back": "ID Back"
+  },
+  "expense": {
+    "add_expense": "Add Expense",
+    "edit_expense": "Edit Expense",
+    "expense_category": "Expense Category",
+    "insurance": "Insurance",
+    "taxes": "Taxes",
+    "salary": "Salary",
+    "maintenance_repair": "Maintenance & Repair",
+    "utilities": "Utilities",
+    "advertising": "Advertising",
+    "legal_professional": "Legal & Professional",
+    "travel": "Travel",
+    "office_supplies": "Office Supplies"
+  },
+  "footer": {
+    "company_description": "The leading property management platform trusted by thousands of property managers worldwide.",
+    "quick_links": "Quick Links",
+    "support": "Support",
+    "legal": "Legal",
+    "follow_us": "Follow Us",
+    "newsletter_title": "Stay Updated",
+    "newsletter_subtitle": "Subscribe to our newsletter for the latest updates",
+    "enter_email": "Enter your email",
+    "subscribe": "Subscribe",
+    "all_rights_reserved": "All rights reserved"
+  }
 }
