--- a/frontend/public/locales/pt/translation.json
+++ b/frontend/public/locales/pt/translation.json
@@ -1,13 +1,362 @@
 {
-  "header": {"login": "Entrar", "get_started": "Começar"},
-  "nav": {"home": "Início", "about": "Sobre", "pricing": "Preços", "contact": "Contato", "login": "Entrar"},
-  "auth": {"welcome_back": "Bem-vindo de volta!", "sign_in_subtitle": "Entre para continuar", "email_address": "Endereço de email", "password": "Senha", "sign_in": "Entrar", "continue_google": "Continuar com Google", "no_account": "Não tem conta?", "sign_up": "Cadastrar", "or": "OU", "forgot_password": "Esqueceu a senha?"},
-  "common": {"loading": "Carregando...", "error": "Erro", "success": "Sucesso", "cancel": "Cancelar", "save": "Salvar", "edit": "Editar", "delete": "Excluir", "add": "Adicionar", "view": "Visualizar", "close": "Fechar", "confirm": "Confirmar", "yes": "Sim", "no": "Não", "learn_more": "Saiba Mais", "analytics": "Análises", "payments": "Pagamentos", "actions": "Ações", "status": "Status", "name": "Nome", "email": "Email", "phone": "Telefone", "address": "Endereço", "city": "Cidade", "state": "Estado", "zip_code": "CEP", "country": "País", "date": "Data", "amount": "Valor", "description": "Descrição", "type": "Tipo", "active": "Ativo", "inactive": "Inativo", "pending": "Pendente", "approved": "Aprovado", "rejected": "Rejeitado", "all_languages": "Todos os Idiomas", "theme": "Tema", "language": "Idioma", "notifications": "Notificações", "profile": "Perfil", "settings": "Configurações"},
-  "dashboard": {"overview": "Visão Geral", "properties": "Propriedades", "tenants": "Inquilinos", "settings": "Configurações", "logout": "Sair", "maintenance": "Manutenção", "expenses": "Despesas", "cash_flow": "Fluxo de Caixa", "reminders": "Lembretes", "approvals": "Aprovações", "users_invites": "Usuários e Convites", "billing": "Faturamento", "audit_log": "Log de Auditoria", "admin_panel": "Painel Admin", "monthly_revenue": "Receita Mensal", "total_properties": "Total de Propriedades", "active_tenants": "Inquilinos Ativos", "occupancy_rate": "Taxa de Ocupação", "tenant_profile": "Perfil do Inquilino", "lease_information": "Informações do Contrato", "pending_approval_requests": "Solicitações de Aprovação Pendentes", "no_pending_requests": "Nenhuma Solicitação Pendente", "manage_account_preferences": "Gerenciar conta e preferências", "profile_information": "Informações do Perfil", "email_notifications": "Notificações por Email", "push_notifications": "Notificações Push", "automated_reminders": "Lembretes Automáticos", "add_new_reminder": "Adicionar Novo Lembrete", "no_automated_reminders": "Nenhum Lembrete Automático Configurado", "tenant": "Inquilino", "next_send": "Próximo Envio", "frequency": "Frequência"},
-  "landing": {"hero_title": "Plataforma Tudo-em-Um para Gestão Imobiliária Moderna", "hero_subtitle": "Automatize tarefas, acompanhe finanças e gerencie inquilinos com facilidade.", "hero_cta": "Comece seu Teste Grátis", "real_stats_title": "Confiado por Gestores Imobiliários no Mundo Todo", "properties_managed": "Propriedades Gerenciadas", "active_users": "Usuários Ativos", "countries_served": "Países Atendidos", "uptime_guarantee": "Garantia de Disponibilidade"},
-  "pricing": {"free": "Grátis", "choose_plan": "Escolher Plano", "monthly": "Mensal", "yearly": "Anual", "per_month": "por mês", "per_year": "por ano", "most_popular": "Mais Popular", "get_started": "Começar", "contact_sales": "Contatar Vendas"},
-  "forms": {"street_address": "Endereço", "required_field": "Este campo é obrigatório", "invalid_email": "Por favor, insira um email válido", "password_too_short": "A senha deve ter pelo menos 8 caracteres", "passwords_dont_match": "As senhas não coincidem"},
-  "property": {"add_property": "Adicionar Propriedade", "edit_property": "Editar Propriedade", "property_name": "Nome da Propriedade", "property_type": "Tipo de Propriedade", "apartment": "Apartamento", "house": "Casa", "commercial": "Comercial", "other": "Outro", "rent_amount": "Valor do Aluguel", "security_deposit": "Depósito Caução", "available_units": "Unidades Disponíveis", "total_units": "Total de Unidades"},
-  "tenant": {"add_tenant": "Adicionar Inquilino", "edit_tenant": "Editar Inquilino", "tenant_name": "Nome do Inquilino", "lease_start": "Início do Contrato", "lease_end": "Fim do Contrato", "rent_due_date": "Data de Vencimento do Aluguel", "late": "Atrasado", "id_front": "RG Frente", "id_back": "RG Verso"},
-  "expense": {"add_expense": "Adicionar Despesa", "edit_expense": "Editar Despesa", "expense_category": "Categoria da Despesa", "insurance": "Seguro", "taxes": "Impostos", "salary": "Salário", "maintenance_repair": "Manutenção e Reparo", "utilities": "Utilidades", "advertising": "Publicidade", "legal_professional": "Jurídico e Profissional", "travel": "Viagem", "office_supplies": "Material de Escritório"}
+  "app_name": "HNV Property Management Solutions",
+  "app_name_short": "HNV Solutions",
+  "header": {
+    "login": "Login",
+    "get_started": "Get Started",
+    "about": "About",
+    "services": "Services",
+    "pricing": "Pricing",
+    "contact": "Contact"
+  },
+  "nav": {
+    "home": "Home",
+    "about": "About",
+    "features": "Features",
+    "services": "Services",
+    "pricing": "Pricing",
+    "contact": "Contact",
+    "login": "Login",
+    "dashboard": "Dashboard"
+  },
+  "auth": {
+    "welcome_back": "Welcome Back!",
+    "sign_in_subtitle": "Sign in to continue to your dashboard",
+    "email_address": "Email Address",
+    "password": "Password",
+    "sign_in": "Sign In",
+    "continue_google": "Continue with Google",
+    "no_account": "Don't have an account?",
+    "sign_up": "Sign Up",
+    "or": "OR",
+    "forgot_password": "Forgot Password?",
+    "enter_email": "Enter your email address",
+    "enter_password": "Enter your password",
+    "remember_me": "Remember me",
+    "create_account": "Create Account",
+    "full_name": "Full Name",
+    "confirm_password": "Confirm Password",
+    "agree_terms": "I agree to the Terms of Service and Privacy Policy",
+    "agent": "Agent",
+    "check_email": "Check your email for verification link",
+    "create_password": "Create a strong password",
+    "enter_full_name": "Enter your full name",
+    "go_to_login": "Go to Login",
+    "have_account": "Already have an account?",
+    "join_thousands": "Join thousands of property managers",
+    "landlord": "Landlord",
+    "role": "Role",
+    "tenant": "Tenant",
+    "verification_sent": "Verification email sent"
+  },
+  "common": {
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "cancel": "Cancel",
+    "save": "Save",
+    "edit": "Edit",
+    "delete": "Delete",
+    "add": "Add",
+    "view": "View",
+    "close": "Close",
+    "confirm": "Confirm",
+    "yes": "Yes",
+    "no": "No",
+    "welcome_back_user": "Welcome back, {{name}}!",
+    "happening_today": "Here's what's happening with your properties today.",
+    "learn_more": "Learn More",
+    "analytics": "Analytics",
+    "payments": "Payments",
+    "actions": "Actions",
+    "status": "Status",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "country": "Country",
+    "date": "Date",
+    "amount": "Amount",
+    "description": "Description",
+    "type": "Type",
+    "active": "Active",
+    "inactive": "Inactive",
+    "pending": "Pending",
+    "approved": "Approved",
+    "rejected": "Rejected",
+    "all_languages": "All Languages",
+    "theme": "Theme",
+    "language": "Language",
+    "notifications": "Notifications",
+    "profile": "Profile",
+    "settings": "Settings",
+    "search": "Search...",
+    "filter": "Filters",
+    "clear_all": "Clear All",
+    "all": "All",
+    "more_options": "More Options",
+    "quick_links": "Quick Links",
+    "legal": "Legal",
+    "about": "About",
+    "features": "Features",
+    "privacy_policy": "Privacy Policy",
+    "terms_of_service": "Terms of Service",
+    "property_management": "Property Management",
+    "change_language": "Change Language",
+    "select_language": "Select Language",
+    "toggle_language": "Toggle Language",
+    "switch_to": "Switch to",
+    "current_language": "Current Language",
+    "theme_dark": "Dark",
+    "theme_light": "Light",
+    "mode": "Mode",
+    "security": "Security"
+  },
+  "dashboard": {
+    "overview": "Overview",
+    "properties": "Properties",
+    "tenants": "Tenants",
+    "settings": "Settings",
+    "logout": "Logout",
+    "maintenance": "Maintenance",
+    "expenses": "Expenses",
+    "cash_flow": "Cash Flow",
+    "reminders": "Reminders",
+    "approvals": "Approvals",
+    "users_invites": "Users & Invites",
+    "billing": "Billing",
+    "audit_log": "Audit Log",
+    "admin_panel": "Admin Panel",
+    "monthly_revenue": "Monthly Revenue",
+    "total_properties": "Total Properties",
+    "active_tenants": "Active Tenants",
+    "occupancy_rate": "Occupancy Rate",
+    "loading_data": "Loading dashboard data...",
+    "overdue_rent_reminders": "Overdue Rent Reminders",
+    "send_reminder": "Send Reminder",
+    "no_overdue_rent": "No overdue rent payments",
+    "upcoming_lease_expirations": "Upcoming Lease Expirations",
+    "renew_lease": "Renew Lease",
+    "no_expiring_leases": "No expiring leases",
+    "financials_chart_title": "Financial Overview",
+    "rent_status_chart_title": "Rent Status",
+    "tenant_profile": "Tenant Profile",
+    "lease_information": "Lease Information",
+    "pending_approval_requests": "Pending Approval Requests",
+    "no_pending_requests": "No Pending Requests",
+    "manage_account_preferences": "Manage your account and preferences",
+    "profile_information": "Profile Information",
+    "email_notifications": "Email Notifications",
+    "push_notifications": "Push Notifications",
+    "automated_reminders": "Automated Reminders",
+    "add_new_reminder": "Add New Reminder",
+    "no_automated_reminders": "No Automated Reminders Configured",
+    "tenant": "Tenant",
+    "next_send": "Next Send",
+    "frequency": "Frequency",
+    "payments": "Payments",
+    "welcome_message": "Welcome to your dashboard",
+    "good_morning": "Good morning",
+    "good_afternoon": "Good afternoon",
+    "good_evening": "Good evening"
+  },
+  "hero": {
+    "title": "The All-in-One Platform for Modern Property Management",
+    "subtitle": "Automate tasks, track finances, and manage tenants with ease. Join thousands of property managers who trust our platform.",
+    "cta_primary": "Start Your Free Trial",
+    "cta_secondary": "Watch Demo",
+    "trusted_by": "Trusted by property managers worldwide"
+  },
+  "landing": {
+    "hero_title": "The All-in-One Platform for Modern Property Management",
+    "hero_subtitle": "Automate tasks, track finances, and manage tenants with ease.",
+    "hero_cta": "Start Your Free Trial",
+    "real_stats_title": "Trusted by Property Managers Worldwide",
+    "properties_managed": "Properties Managed",
+    "active_users": "Active Users",
+    "countries_served": "Countries Served",
+    "uptime_guarantee": "Uptime Guarantee"
+  },
+  "landscape": {
+    "title": "Transform Your Property Management",
+    "subtitle": "Experience the future of property management with our comprehensive platform",
+    "image_alt": "Property Management Platform"
+  },
+  "about": {
+    "title": "About Us",
+    "subtitle": "Revolutionizing property management with innovative technology",
+    "description": "We are dedicated to providing the most comprehensive and user-friendly property management solution. Our platform helps landlords, agents, and property managers streamline their operations and grow their business.",
+    "mission_title": "Our Mission",
+    "mission_description": "To empower property managers with cutting-edge technology that simplifies complex tasks and drives business growth.",
+    "vision_title": "Our Vision",
+    "vision_description": "To become the global leader in property management software, trusted by millions of users worldwide."
+  },
+  "features": {
+    "title": "Powerful Features",
+    "subtitle": "Everything you need to manage properties efficiently",
+    "property_management": "Property Management",
+    "property_management_desc": "Comprehensive property tracking and management tools",
+    "tenant_management": "Tenant Management",
+    "tenant_management_desc": "Complete tenant lifecycle management",
+    "financial_tracking": "Financial Tracking",
+    "financial_tracking_desc": "Advanced financial reporting and analytics",
+    "maintenance_management": "Maintenance Management",
+    "maintenance_management_desc": "Streamlined maintenance request handling",
+    "automated_reminders": "Automated Reminders",
+    "automated_reminders_desc": "Never miss important dates and payments",
+    "mobile_access": "Mobile Access",
+    "mobile_access_desc": "Manage your properties on the go",
+    "security_desc": "Enterprise-grade security for your data"
+  },
+  "pricing": {
+    "title": "Simple, Transparent Pricing",
+    "subtitle": "Choose the plan that fits your needs",
+    "free": "Free",
+    "choose_plan": "Choose Plan",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "per_month": "per month",
+    "per_year": "per year",
+    "most_popular": "Most Popular",
+    "get_started": "Get Started",
+    "contact_sales": "Contact Sales",
+    "free_plan_name": "Starter",
+    "basic_plan_name": "Professional",
+    "premium_plan_name": "Enterprise",
+    "free_plan_desc": "Perfect for getting started",
+    "basic_plan_desc": "For growing property portfolios",
+    "premium_plan_desc": "For large-scale operations"
+  },
+  "services": {
+    "title": "Our Services",
+    "subtitle": "Comprehensive property management solutions",
+    "property_tracking_title": "Property Tracking",
+    "property_tracking_desc": "Track all your properties in one place",
+    "rent_collection_title": "Rent Collection",
+    "rent_collection_desc": "Automated rent collection and reminders",
+    "tenant_management_title": "Tenant Management",
+    "tenant_management_desc": "Manage tenants and lease agreements",
+    "maintenance_title": "Maintenance Management",
+    "maintenance_desc": "Handle maintenance requests efficiently",
+    "financial_reporting_title": "Financial Reporting",
+    "financial_reporting_desc": "Comprehensive financial insights and reports",
+    "document_management_title": "Document Management",
+    "document_management_desc": "Secure document storage and management"
+  },
+  "contact": {
+    "title": "Get in Touch",
+    "subtitle": "We'd love to hear from you. Send us a message and we'll respond as soon as possible.",
+    "name": "Name",
+    "email": "Email",
+    "subject": "Subject",
+    "message": "Message",
+    "send_message": "Send Message",
+    "contact_info": "Contact Information",
+    "address": "Address",
+    "phone": "Phone",
+    "email_address": "Email Address",
+    "business_hours": "Business Hours",
+    "monday_friday": "Monday - Friday: 9:00 AM - 6:00 PM",
+    "saturday": "Saturday: 10:00 AM - 4:00 PM",
+    "sunday": "Sunday: Closed"
+  },
+  "install_app": {
+    "title": "Install Our App",
+    "subtitle": "Get the native mobile experience",
+    "description": "Download our mobile app for the best property management experience on the go.",
+    "download_ios": "Download for iOS",
+    "download_android": "Download for Android",
+    "scan_qr": "Scan QR Code"
+  },
+  "leadership": {
+    "title": "Meet Our Team",
+    "subtitle": "The experts behind our success",
+    "ceo_name": "John Smith",
+    "ceo_title": "Chief Executive Officer",
+    "cto_name": "Jane Doe",
+    "cto_title": "Chief Technology Officer",
+    "coo_name": "Mike Johnson",
+    "coo_title": "Chief Operating Officer"
+  },
+  "forms": {
+    "street_address": "Street Address",
+    "required_field": "This field is required",
+    "invalid_email": "Please enter a valid email address",
+    "password_too_short": "Password must be at least 8 characters",
+    "passwords_dont_match": "Passwords don't match"
+  },
+  "property": {
+    "add_property": "Add Property",
+    "edit_property": "Edit Property",
+    "property_name": "Property Name",
+    "property_type": "Property Type",
+    "apartment": "Apartment",
+    "house": "House",
+    "commercial": "Commercial",
+    "other": "Other",
+    "rent_amount": "Rent Amount",
+    "security_deposit": "Security Deposit",
+    "available_units": "Available Units",
+    "total_units": "Total Units",
+    "loading_properties": "Loading properties...",
+    "manage_portfolio": "Manage your property portfolio",
+    "view": "View",
+    "edit": "Edit",
+    "no_properties_yet": "No Properties Yet",
+    "add_first_property": "Add Your First Property",
+    "add_new_property": "Add New Property",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "click_to_upload": "Click to upload image",
+    "enter_property_name": "Enter property name",
+    "inactive": "Inactive",
+    "active": "Active",
+    "number_of_units": "Number of Units",
+    "property_image": "Property Image",
+    "save_property": "Save Property",
+    "street_address": "Street Address",
+    "units": "Units"
+  },
+  "tenant": {
+    "add_tenant": "Add Tenant",
+    "edit_tenant": "Edit Tenant",
+    "tenant_name": "Tenant Name",
+    "lease_start": "Lease Start",
+    "lease_end": "Lease End",
+    "rent_due_date": "Rent Due Date",
+    "late": "Late",
+    "id_front": "ID Front",
+    "id_back": "ID Back"
+  },
+  "expense": {
+    "add_expense": "Add Expense",
+    "edit_expense": "Edit Expense",
+    "expense_category": "Expense Category",
+    "insurance": "Insurance",
+    "taxes": "Taxes",
+    "salary": "Salary",
+    "maintenance_repair": "Maintenance & Repair",
+    "utilities": "Utilities",
+    "advertising": "Advertising",
+    "legal_professional": "Legal & Professional",
+    "travel": "Travel",
+    "office_supplies": "Office Supplies"
+  },
+  "footer": {
+    "company_description": "The leading property management platform trusted by thousands of property managers worldwide.",
+    "quick_links": "Quick Links",
+    "support": "Support",
+    "legal": "Legal",
+    "follow_us": "Follow Us",
+    "newsletter_title": "Stay Updated",
+    "newsletter_subtitle": "Subscribe to our newsletter for the latest updates",
+    "enter_email": "Enter your email",
+    "subscribe": "Subscribe",
+    "all_rights_reserved": "All rights reserved"
+  }
 }
