--- a/frontend/public/locales/zh/translation.json
+++ b/frontend/public/locales/zh/translation.json
@@ -1,13 +1,362 @@
 {
-  "header": {"login": "登录", "get_started": "开始使用"},
-  "nav": {"home": "首页", "about": "关于", "pricing": "定价", "contact": "联系", "login": "登录"},
-  "auth": {"welcome_back": "欢迎回来！", "sign_in_subtitle": "登录以继续", "email_address": "邮箱地址", "password": "密码", "sign_in": "登录", "continue_google": "使用Google继续", "no_account": "没有账户？", "sign_up": "注册", "or": "或", "forgot_password": "忘记密码？"},
-  "common": {"loading": "加载中...", "error": "错误", "success": "成功", "cancel": "取消", "save": "保存", "edit": "编辑", "delete": "删除", "add": "添加", "view": "查看", "close": "关闭", "confirm": "确认", "yes": "是", "no": "否", "learn_more": "了解更多", "analytics": "分析", "payments": "支付", "actions": "操作", "status": "状态", "name": "姓名", "email": "邮箱", "phone": "电话", "address": "地址", "city": "城市", "state": "省份", "zip_code": "邮编", "country": "国家", "date": "日期", "amount": "金额", "description": "描述", "type": "类型", "active": "活跃", "inactive": "非活跃", "pending": "待处理", "approved": "已批准", "rejected": "已拒绝", "all_languages": "所有语言", "theme": "主题", "language": "语言", "notifications": "通知", "profile": "个人资料", "settings": "设置", "search": "搜索...", "filter": "筛选", "clear_all": "清除全部", "all": "全部", "more_options": "更多选项", "quick_links": "快速链接", "legal": "法律", "about": "关于", "features": "功能", "privacy_policy": "隐私政策", "terms_of_service": "服务条款", "property_management": "房产管理"},
-  "dashboard": {"overview": "概览", "properties": "房产", "tenants": "租户", "settings": "设置", "logout": "退出", "maintenance": "维护", "expenses": "支出", "cash_flow": "现金流", "reminders": "提醒", "approvals": "审批", "users_invites": "用户与邀请", "billing": "账单", "audit_log": "审计日志", "admin_panel": "管理面板", "monthly_revenue": "月收入", "total_properties": "总房产数", "active_tenants": "活跃租户", "occupancy_rate": "入住率", "tenant_profile": "租户档案", "lease_information": "租赁信息", "pending_approval_requests": "待审批请求", "no_pending_requests": "无待处理请求", "manage_account_preferences": "管理账户和偏好设置", "profile_information": "个人资料信息", "email_notifications": "邮件通知", "push_notifications": "推送通知", "automated_reminders": "自动提醒", "add_new_reminder": "添加新提醒", "no_automated_reminders": "未配置自动提醒", "tenant": "租户", "next_send": "下次发送", "frequency": "频率"},
-  "landing": {"hero_title": "现代房产管理的一体化平台", "hero_subtitle": "自动化任务，跟踪财务，轻松管理租户。", "hero_cta": "开始免费试用", "real_stats_title": "受到全球房产管理者信赖", "properties_managed": "管理房产", "active_users": "活跃用户", "countries_served": "服务国家", "uptime_guarantee": "正常运行时间保证"},
-  "pricing": {"free": "免费", "choose_plan": "选择计划", "monthly": "月付", "yearly": "年付", "per_month": "每月", "per_year": "每年", "most_popular": "最受欢迎", "get_started": "开始使用", "contact_sales": "联系销售"},
-  "forms": {"street_address": "街道地址", "required_field": "此字段为必填项", "invalid_email": "请输入有效的邮箱地址", "password_too_short": "密码至少需要8个字符", "passwords_dont_match": "密码不匹配"},
-  "property": {"add_property": "添加房产", "edit_property": "编辑房产", "property_name": "房产名称", "property_type": "房产类型", "apartment": "公寓", "house": "房屋", "commercial": "商业", "other": "其他", "rent_amount": "租金金额", "security_deposit": "押金", "available_units": "可用单元", "total_units": "总单元数"},
-  "tenant": {"add_tenant": "添加租户", "edit_tenant": "编辑租户", "tenant_name": "租户姓名", "lease_start": "租赁开始", "lease_end": "租赁结束", "rent_due_date": "租金到期日", "late": "逾期", "id_front": "身份证正面", "id_back": "身份证背面"},
-  "expense": {"add_expense": "添加支出", "edit_expense": "编辑支出", "expense_category": "支出类别", "insurance": "保险", "taxes": "税费", "salary": "工资", "maintenance_repair": "维护修理", "utilities": "公用事业", "advertising": "广告", "legal_professional": "法律专业", "travel": "差旅", "office_supplies": "办公用品"}
+  "app_name": "HNV Property Management Solutions",
+  "app_name_short": "HNV Solutions",
+  "header": {
+    "login": "Login",
+    "get_started": "Get Started",
+    "about": "About",
+    "services": "Services",
+    "pricing": "Pricing",
+    "contact": "Contact"
+  },
+  "nav": {
+    "home": "Home",
+    "about": "About",
+    "features": "Features",
+    "services": "Services",
+    "pricing": "Pricing",
+    "contact": "Contact",
+    "login": "Login",
+    "dashboard": "Dashboard"
+  },
+  "auth": {
+    "welcome_back": "Welcome Back!",
+    "sign_in_subtitle": "Sign in to continue to your dashboard",
+    "email_address": "Email Address",
+    "password": "Password",
+    "sign_in": "Sign In",
+    "continue_google": "Continue with Google",
+    "no_account": "Don't have an account?",
+    "sign_up": "Sign Up",
+    "or": "OR",
+    "forgot_password": "Forgot Password?",
+    "enter_email": "Enter your email address",
+    "enter_password": "Enter your password",
+    "remember_me": "Remember me",
+    "create_account": "Create Account",
+    "full_name": "Full Name",
+    "confirm_password": "Confirm Password",
+    "agree_terms": "I agree to the Terms of Service and Privacy Policy",
+    "agent": "Agent",
+    "check_email": "Check your email for verification link",
+    "create_password": "Create a strong password",
+    "enter_full_name": "Enter your full name",
+    "go_to_login": "Go to Login",
+    "have_account": "Already have an account?",
+    "join_thousands": "Join thousands of property managers",
+    "landlord": "Landlord",
+    "role": "Role",
+    "tenant": "Tenant",
+    "verification_sent": "Verification email sent"
+  },
+  "common": {
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "cancel": "Cancel",
+    "save": "Save",
+    "edit": "Edit",
+    "delete": "Delete",
+    "add": "Add",
+    "view": "View",
+    "close": "Close",
+    "confirm": "Confirm",
+    "yes": "Yes",
+    "no": "No",
+    "welcome_back_user": "Welcome back, {{name}}!",
+    "happening_today": "Here's what's happening with your properties today.",
+    "learn_more": "Learn More",
+    "analytics": "Analytics",
+    "payments": "Payments",
+    "actions": "Actions",
+    "status": "Status",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "country": "Country",
+    "date": "Date",
+    "amount": "Amount",
+    "description": "Description",
+    "type": "Type",
+    "active": "Active",
+    "inactive": "Inactive",
+    "pending": "Pending",
+    "approved": "Approved",
+    "rejected": "Rejected",
+    "all_languages": "All Languages",
+    "theme": "Theme",
+    "language": "Language",
+    "notifications": "Notifications",
+    "profile": "Profile",
+    "settings": "Settings",
+    "search": "Search...",
+    "filter": "Filters",
+    "clear_all": "Clear All",
+    "all": "All",
+    "more_options": "More Options",
+    "quick_links": "Quick Links",
+    "legal": "Legal",
+    "about": "About",
+    "features": "Features",
+    "privacy_policy": "Privacy Policy",
+    "terms_of_service": "Terms of Service",
+    "property_management": "Property Management",
+    "change_language": "Change Language",
+    "select_language": "Select Language",
+    "toggle_language": "Toggle Language",
+    "switch_to": "Switch to",
+    "current_language": "Current Language",
+    "theme_dark": "Dark",
+    "theme_light": "Light",
+    "mode": "Mode",
+    "security": "Security"
+  },
+  "dashboard": {
+    "overview": "Overview",
+    "properties": "Properties",
+    "tenants": "Tenants",
+    "settings": "Settings",
+    "logout": "Logout",
+    "maintenance": "Maintenance",
+    "expenses": "Expenses",
+    "cash_flow": "Cash Flow",
+    "reminders": "Reminders",
+    "approvals": "Approvals",
+    "users_invites": "Users & Invites",
+    "billing": "Billing",
+    "audit_log": "Audit Log",
+    "admin_panel": "Admin Panel",
+    "monthly_revenue": "Monthly Revenue",
+    "total_properties": "Total Properties",
+    "active_tenants": "Active Tenants",
+    "occupancy_rate": "Occupancy Rate",
+    "loading_data": "Loading dashboard data...",
+    "overdue_rent_reminders": "Overdue Rent Reminders",
+    "send_reminder": "Send Reminder",
+    "no_overdue_rent": "No overdue rent payments",
+    "upcoming_lease_expirations": "Upcoming Lease Expirations",
+    "renew_lease": "Renew Lease",
+    "no_expiring_leases": "No expiring leases",
+    "financials_chart_title": "Financial Overview",
+    "rent_status_chart_title": "Rent Status",
+    "tenant_profile": "Tenant Profile",
+    "lease_information": "Lease Information",
+    "pending_approval_requests": "Pending Approval Requests",
+    "no_pending_requests": "No Pending Requests",
+    "manage_account_preferences": "Manage your account and preferences",
+    "profile_information": "Profile Information",
+    "email_notifications": "Email Notifications",
+    "push_notifications": "Push Notifications",
+    "automated_reminders": "Automated Reminders",
+    "add_new_reminder": "Add New Reminder",
+    "no_automated_reminders": "No Automated Reminders Configured",
+    "tenant": "Tenant",
+    "next_send": "Next Send",
+    "frequency": "Frequency",
+    "payments": "Payments",
+    "welcome_message": "Welcome to your dashboard",
+    "good_morning": "Good morning",
+    "good_afternoon": "Good afternoon",
+    "good_evening": "Good evening"
+  },
+  "hero": {
+    "title": "The All-in-One Platform for Modern Property Management",
+    "subtitle": "Automate tasks, track finances, and manage tenants with ease. Join thousands of property managers who trust our platform.",
+    "cta_primary": "Start Your Free Trial",
+    "cta_secondary": "Watch Demo",
+    "trusted_by": "Trusted by property managers worldwide"
+  },
+  "landing": {
+    "hero_title": "The All-in-One Platform for Modern Property Management",
+    "hero_subtitle": "Automate tasks, track finances, and manage tenants with ease.",
+    "hero_cta": "Start Your Free Trial",
+    "real_stats_title": "Trusted by Property Managers Worldwide",
+    "properties_managed": "Properties Managed",
+    "active_users": "Active Users",
+    "countries_served": "Countries Served",
+    "uptime_guarantee": "Uptime Guarantee"
+  },
+  "landscape": {
+    "title": "Transform Your Property Management",
+    "subtitle": "Experience the future of property management with our comprehensive platform",
+    "image_alt": "Property Management Platform"
+  },
+  "about": {
+    "title": "About Us",
+    "subtitle": "Revolutionizing property management with innovative technology",
+    "description": "We are dedicated to providing the most comprehensive and user-friendly property management solution. Our platform helps landlords, agents, and property managers streamline their operations and grow their business.",
+    "mission_title": "Our Mission",
+    "mission_description": "To empower property managers with cutting-edge technology that simplifies complex tasks and drives business growth.",
+    "vision_title": "Our Vision",
+    "vision_description": "To become the global leader in property management software, trusted by millions of users worldwide."
+  },
+  "features": {
+    "title": "Powerful Features",
+    "subtitle": "Everything you need to manage properties efficiently",
+    "property_management": "Property Management",
+    "property_management_desc": "Comprehensive property tracking and management tools",
+    "tenant_management": "Tenant Management",
+    "tenant_management_desc": "Complete tenant lifecycle management",
+    "financial_tracking": "Financial Tracking",
+    "financial_tracking_desc": "Advanced financial reporting and analytics",
+    "maintenance_management": "Maintenance Management",
+    "maintenance_management_desc": "Streamlined maintenance request handling",
+    "automated_reminders": "Automated Reminders",
+    "automated_reminders_desc": "Never miss important dates and payments",
+    "mobile_access": "Mobile Access",
+    "mobile_access_desc": "Manage your properties on the go",
+    "security_desc": "Enterprise-grade security for your data"
+  },
+  "pricing": {
+    "title": "Simple, Transparent Pricing",
+    "subtitle": "Choose the plan that fits your needs",
+    "free": "Free",
+    "choose_plan": "Choose Plan",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "per_month": "per month",
+    "per_year": "per year",
+    "most_popular": "Most Popular",
+    "get_started": "Get Started",
+    "contact_sales": "Contact Sales",
+    "free_plan_name": "Starter",
+    "basic_plan_name": "Professional",
+    "premium_plan_name": "Enterprise",
+    "free_plan_desc": "Perfect for getting started",
+    "basic_plan_desc": "For growing property portfolios",
+    "premium_plan_desc": "For large-scale operations"
+  },
+  "services": {
+    "title": "Our Services",
+    "subtitle": "Comprehensive property management solutions",
+    "property_tracking_title": "Property Tracking",
+    "property_tracking_desc": "Track all your properties in one place",
+    "rent_collection_title": "Rent Collection",
+    "rent_collection_desc": "Automated rent collection and reminders",
+    "tenant_management_title": "Tenant Management",
+    "tenant_management_desc": "Manage tenants and lease agreements",
+    "maintenance_title": "Maintenance Management",
+    "maintenance_desc": "Handle maintenance requests efficiently",
+    "financial_reporting_title": "Financial Reporting",
+    "financial_reporting_desc": "Comprehensive financial insights and reports",
+    "document_management_title": "Document Management",
+    "document_management_desc": "Secure document storage and management"
+  },
+  "contact": {
+    "title": "Get in Touch",
+    "subtitle": "We'd love to hear from you. Send us a message and we'll respond as soon as possible.",
+    "name": "Name",
+    "email": "Email",
+    "subject": "Subject",
+    "message": "Message",
+    "send_message": "Send Message",
+    "contact_info": "Contact Information",
+    "address": "Address",
+    "phone": "Phone",
+    "email_address": "Email Address",
+    "business_hours": "Business Hours",
+    "monday_friday": "Monday - Friday: 9:00 AM - 6:00 PM",
+    "saturday": "Saturday: 10:00 AM - 4:00 PM",
+    "sunday": "Sunday: Closed"
+  },
+  "install_app": {
+    "title": "Install Our App",
+    "subtitle": "Get the native mobile experience",
+    "description": "Download our mobile app for the best property management experience on the go.",
+    "download_ios": "Download for iOS",
+    "download_android": "Download for Android",
+    "scan_qr": "Scan QR Code"
+  },
+  "leadership": {
+    "title": "Meet Our Team",
+    "subtitle": "The experts behind our success",
+    "ceo_name": "John Smith",
+    "ceo_title": "Chief Executive Officer",
+    "cto_name": "Jane Doe",
+    "cto_title": "Chief Technology Officer",
+    "coo_name": "Mike Johnson",
+    "coo_title": "Chief Operating Officer"
+  },
+  "forms": {
+    "street_address": "Street Address",
+    "required_field": "This field is required",
+    "invalid_email": "Please enter a valid email address",
+    "password_too_short": "Password must be at least 8 characters",
+    "passwords_dont_match": "Passwords don't match"
+  },
+  "property": {
+    "add_property": "Add Property",
+    "edit_property": "Edit Property",
+    "property_name": "Property Name",
+    "property_type": "Property Type",
+    "apartment": "Apartment",
+    "house": "House",
+    "commercial": "Commercial",
+    "other": "Other",
+    "rent_amount": "Rent Amount",
+    "security_deposit": "Security Deposit",
+    "available_units": "Available Units",
+    "total_units": "Total Units",
+    "loading_properties": "Loading properties...",
+    "manage_portfolio": "Manage your property portfolio",
+    "view": "View",
+    "edit": "Edit",
+    "no_properties_yet": "No Properties Yet",
+    "add_first_property": "Add Your First Property",
+    "add_new_property": "Add New Property",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "click_to_upload": "Click to upload image",
+    "enter_property_name": "Enter property name",
+    "inactive": "Inactive",
+    "active": "Active",
+    "number_of_units": "Number of Units",
+    "property_image": "Property Image",
+    "save_property": "Save Property",
+    "street_address": "Street Address",
+    "units": "Units"
+  },
+  "tenant": {
+    "add_tenant": "Add Tenant",
+    "edit_tenant": "Edit Tenant",
+    "tenant_name": "Tenant Name",
+    "lease_start": "Lease Start",
+    "lease_end": "Lease End",
+    "rent_due_date": "Rent Due Date",
+    "late": "Late",
+    "id_front": "ID Front",
+    "id_back": "ID Back"
+  },
+  "expense": {
+    "add_expense": "Add Expense",
+    "edit_expense": "Edit Expense",
+    "expense_category": "Expense Category",
+    "insurance": "Insurance",
+    "taxes": "Taxes",
+    "salary": "Salary",
+    "maintenance_repair": "Maintenance & Repair",
+    "utilities": "Utilities",
+    "advertising": "Advertising",
+    "legal_professional": "Legal & Professional",
+    "travel": "Travel",
+    "office_supplies": "Office Supplies"
+  },
+  "footer": {
+    "company_description": "The leading property management platform trusted by thousands of property managers worldwide.",
+    "quick_links": "Quick Links",
+    "support": "Support",
+    "legal": "Legal",
+    "follow_us": "Follow Us",
+    "newsletter_title": "Stay Updated",
+    "newsletter_subtitle": "Subscribe to our newsletter for the latest updates",
+    "enter_email": "Enter your email",
+    "subscribe": "Subscribe",
+    "all_rights_reserved": "All rights reserved"
+  }
 }
